Add Tailwind CSS and configure styles
Integrates Tailwind CSS into the project by adding required dependencies, creating a tailwind.config.js file, and updating CSS files (App.css, index.css) and App.tsx to use Tailwind utility classes. Updates package.json to include Tailwind and related PostCSS dependencies.

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,16 @@
     box-sizing: border-box;
 } */
 
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
+
+@font-face {
+  font-family: 'Manrope';
+  src: url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap') format('woff2');
+  font-weight: 400; /* Regular */
+  font-style: normal;
+}
+
+
 html {
     height: 100%;
 }
