--- a/src/App.css
+++ b/src/App.css
@@ -4,23 +4,17 @@
     box-sizing: border-box;
 } */
 
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
 
 @font-face {
   font-family: 'Manrope';
   src: url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap') format('woff2');
-  font-weight: 400; /* Regular */
+  font-weight: 400; 
   font-style: normal;
-}
+} */
 
 
-html {
-    height: 100%;
-}
 
-body {
-    min-height: 100vh;
-}
 
 /* main {
     background-color: hsl(218, 23%, 16%);
@@ -35,6 +29,3 @@ body {
     color: hsl(193, 38%, 86%);
 } */
 
-.attribution a {    
-    color: #00FFA0; 
-}
