--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,31 @@
+@font-face {
+  font-family: "Manrope";
+  src: url("/Fonts/Manrope/Manrope-VariableFont_wght.ttf") format("truetype");
+  /* font-weight: 400;
+  font-style: normal; */
+}
+
+/* @font-face {
+  font-family: "Manrope";
+  src: url("/Fonts/Manrope/Manrope-Bold.ttf") format("truetype");
+  font-weight: 800;
+  font-style: normal;
+} */
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+html {
+    height: 100%;
+}
+
 body {
     font-family: "Manrope";
+    font-weight: 800;
+    min-height: 100vh;
+}
+
+.attribution a {    
+    color: #00FFA0; 
 }
