--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ html {
 }
 
 body {
-    font-family: "Manrope";
+    font-family: "Manrope", "Segoe UI", Roboto, Helvetica, system-ui, sans-serif;
     min-height: 100vh;
     margin: 0;
 }
@@ -30,11 +30,7 @@ body {
     color: #00FFA0; 
 }
 
-.mt-lg-15rem {
-  @apply mt-[15rem];
-}
-
-@media (min-width: 768px) {
+@media (min-width: 48rem) {
 
   .card{
     margin-top: 14rem;
