Add fade-in effect to advice text on update
Introduced a 'visible' state to control the opacity transition of the advice text when new advice is loaded. Updated the advice paragraph to toggle opacity based on this state, enhancing the user experience with a smooth fade-in animation.

--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,10 @@ body {
     margin: 0;
 }
 
+.loading {
+  /* opacity: 0; */
+}
+
 .button-container:hover {
     /* box-shadow: 0 0 1.8rem .001rem #37f1ad; */
     /* background-color: #25ffaf; */
