Adjust fade-in timing and fix image path
Commented out handleFadeIn calls and reduced the delay in fetchData from 500ms to 50ms for a snappier UI. Updated the advice text transition to use a longer duration when becoming visible. Fixed the button background image path in index.css to correctly reference the images directory.

--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@ button {
   /* top: 80%; */
   /* bottom: 0; */
   /* display: flex; */
-  background-image: url("images/icon-dice.svg");
+  background-image: url("../images/icon-dice.svg");
   /* border: 1rem solid #37f1ad; */
   border: none;
   background-color: #00FFA0;
