--- a/src/index.css
+++ b/src/index.css
@@ -26,29 +26,12 @@ body {
     margin: 0;
 }
 
-.loading {
-  /* opacity: 0; */
-}
-
-.button-container:hover {
-    /* box-shadow: 0 0 1.8rem .001rem #37f1ad; */
-    /* background-color: #25ffaf; */
-}
-
 button {
-  /* outline: 1rem solid green;
-  border-radius: 50%; */
-  /* z-index: 100; */
   height: 1.5rem;
-  /* height: auto; */
   width: 1.5rem;
   position: absolute;
   top: 283px;
-  /* top: 80%; */
-  /* bottom: 0; */
-  /* display: flex; */
   background-image: url("../images/icon-dice.svg");
-  /* border: 1rem solid #37f1ad; */
   border: none;
   background-color: #00FFA0;
   padding: 1.8rem;
@@ -62,37 +45,10 @@ button {
 
 }
 
-button::before {
-  /* content: url("/images/icon-dice.svg"); */
-  /* content: ""; */
-  width: 5rem;
-  height: 1.5rem;
-  border: 1.3rem solid #00FFA0;
-  /* z-index: 0; */
-  border-radius: 50%;
-  position: relative;
-  bottom: 30px;
-  right: 30px;
-  /* margin: 0 auto; */
-  /* background-image: url("/images/icon-dice.svg"); */
-  /* color: green; */
-  background-color: #00FFA0;
-}
-
-button:hover {
-  box-shadow: 0 0 1.8rem .001rem #37f1ad;
-  background-color: #25ffaf;
-}
-
 button:active {
   transform: scale(.92);
-  /* transition: transform .1s ease; */
-  /* translate: 50%; */
-}
-
-button:active {
-  /* box-shadow: none; */
-  /* transform: translateY(2px); */
+  background-color: #25ffaf;
+  box-shadow: 0 0 1.8rem 0.001rem #37f1ad;
 }
 
 button:focus-visible {
@@ -109,6 +65,23 @@ button:disabled {
 
 .attribution a {    
     color: #00FFA0; 
+}
+
+/* Hover effect ONLY on devices that actually support hover */
+@media (hover: hover) and (pointer: fine) {
+
+  button:hover {
+    background-color: #25ffaf;
+    box-shadow: 0 0 1.8rem 0.001rem #37f1ad;
+  }
+
+  button:disabled {
+    cursor: not-allowed;
+    box-shadow: none;
+    transform: none;
+    opacity: .6;
+  }
+
 }
 
 @media (min-width: 48rem) {
@@ -136,13 +109,8 @@ button:disabled {
     top: 31px;
   }
 
-  .button-container{
+  button {
     top: 299px;
   }
-
-  /* .button-container:hover {
-    box-shadow: 0 0 1.8rem .001rem #37f1ad;
-    background-color: #25ffaf;
-  } */
 
 }
